--- a/view/styles/style.css
+++ b/view/styles/style.css
@@ -1,36 +1,182 @@
 html {
-    /* px 表示 “像素（pixels）”: 基础字号为 10 像素 */
-    font-size: 10px; 
-    /* Google fonts 输出的 CSS */
-    font-family: 'Open Sans', sans-serif; 
-    background-color: #00539F;
-  }
+  /* px 表示 “像素（pixels）”: 基础字号为 10 像素 */
+  font-size: 10px;
+  /* Google fonts 输出的 CSS */
+  font-family: 'Open Sans', sans-serif;
+  background-color: #00539F;
+}
 
-  body {
-    width: 600px;
-    margin: 0 auto;
-    background-color: #FF9500;
-    padding: 0 20px 20px 20px;
-    border: 5px solid black;
-  }
+body {
+  width: 800px;
+  margin: 0 auto;
+  background-color: #FF9500;
+  padding: 0 20px 20px 20px;
+  border: 5px solid black;
+}
 
-  h1 {
-    font-size: 60px;
-    text-align: center;
+h1 {
+  font-size: 60px;
+  text-align: center;
+  margin: 0;
+  padding: 20px 0;
+  color: #00539F;
+  text-shadow: 3px 3px 1px black;
+}
 
-    margin: 0;
-    padding: 20px 0;    
-    color: #00539F;
-    text-shadow: 3px 3px 1px black;
-  }
-  
-  p, li {
-    font-size: 16px;    
-    line-height: 2;
-    letter-spacing: 1px;
-  }
+p, li {
+  font-size: 16px;
+  line-height: 2;
+  letter-spacing: 1px;
+}
 
-  img {
-    display: block;
-    margin: 0 auto;
-  }
+img {
+  display: block;
+  margin: 0 auto;
+}
+
+/* 页眉布局 */
+
+header {
+  margin-bottom: 10px;
+  display: flex;
+  flex-flow: row wrap;
+}
+
+main, header, nav, article, aside, footer, section {
+  /* background-color: rgba(0, 200, 83, 0.5); */
+  padding: 1%;
+}
+
+h1 {
+  flex: 5;
+  text-transform: uppercase;
+  color: black;
+}
+
+header img {
+  display: block;
+  height: 60px;
+  padding-top: 20.15px;
+}
+
+nav {
+  height: 50px;
+  flex: 100%;
+  display: flex;
+}
+
+nav ul {
+  padding: 0;
+  list-style-type: none;
+  flex: 2;
+  display: flex;
+}
+
+nav li {
+  display: inline;
+  text-align: center;
+  flex: 1;
+}
+
+nav a, nav span {
+  display: inline-block;
+  font-size: 2rem;
+  height: 3rem;
+  line-height: 1.7;
+  text-transform: uppercase;
+  text-decoration: none;
+  color: black;
+}
+
+/* 主布局 */
+
+main {
+  display: flex;
+}
+
+article, section {
+  flex: 4;
+}
+
+aside {
+  flex: 1;
+  margin-left: 10px;
+  padding: 1%;
+}
+
+aside a {
+  display: block;
+  float: left;
+  width: 50%;
+}
+
+aside img {
+  max-width: 100%;
+}
+
+footer {
+  margin-top: 10px;
+}
+
+#bbsForm form {
+  /* 居中表单 */
+  margin: 0 auto;
+  width: 400px;
+  /* 显示表单的轮廓 */
+  padding: 1em;
+  border: 1px solid #CCC;
+  border-radius: 1em;
+}
+
+#bbsForm form div+div {
+  margin-top: 1em;
+}
+
+#bbsForm label {
+  /* 确保所有label大小相同并正确对齐 */
+  display: inline-block;
+  width: 90px;
+  text-align: right;
+}
+
+#bbsForm input, textarea {
+  /* 确保所有文本输入框字体相同
+     textarea默认是等宽字体 */
+  font: 1em sans-serif;
+  /* 使所有文本输入框大小相同 */
+  width: 300px;
+  box-sizing: border-box;
+  /* 调整文本输入框的边框样式 */
+  border: 1px solid #999;
+}
+
+#bbsForm input:focus, textarea:focus {
+  /* 给激活的元素一点高亮效果 */
+  border-color: #000;
+}
+
+#bbsForm input:invalid {
+  border: 2px dashed red;
+}
+
+#bbsForm input:valid {
+  border: 2px solid black;
+}
+
+#bbsForm textarea {
+  /* 使多行文本输入框和它们的label正确对齐 */
+  vertical-align: top;
+  /* 给文本留下足够的空间 */
+  height: 5em;
+}
+
+#bbsForm .button {
+  /* 把按钮放到和文本输入框一样的位置 */
+  padding-left: 90px;
+  /* 和label的大小一样 */
+}
+
+#bbsForm button {
+  /* 这个外边距的大小与label和文本输入框之间的间距差不多 */
+  margin-left: .5em;
+}
