--- a/view/index/bbs.html
+++ b/view/index/bbs.html
@@ -11,6 +11,7 @@
 <body>
     <header>
         <!-- 本站所有网页的统一主标题 -->
+        <img src="../images/beach-ball.png">
         <h1>欢迎来到<strong>篮球世界</strong></h1>
         <img src="../images/beach-ball.png">
     </header>
