--- a/view/index/bbs.html
+++ b/view/index/bbs.html
@@ -3,7 +3,8 @@
 
 <head>
     <meta charset="utf-8">
-    <link href="../styles/style.css" rel="stylesheet" type="text/css">
+    <link href="../styles/normalize.css" rel="stylesheet" type="text/css">
+    <link href="../styles/bbs.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.font.im/css?family=Open+Sans" rel="stylesheet" type="text/css">
     <title>篮球世界</title>
 </head>
@@ -12,25 +13,54 @@
     <header>
         <!-- 本站所有网页的统一主标题 -->
         <img src="../images/beach-ball.png">
-        <h1>欢迎来到<strong>篮球世界</strong></h1>
+        <h1 class="siteWorld">欢迎来到<strong>篮球世界</strong></h1>
         <img src="../images/beach-ball.png">
     </header>
 
     <nav>
         <!-- 本站所有网页的统一主标题 -->
-        <ul>
+        <ul class="menu-list">
             <li><a href="../../index.html">主页</a></li>
             <li><a href="#">留言板</a></li>
             <!-- 共n个导航栏项目，省略…… -->
         </ul>
-        <form>
-            <!-- 搜索栏是站点内导航的一个非线性的方式。 -->
-            <input type="search" name="q" placeholder="要搜索的内容">
-            <input type="submit" value="搜索">
-        </form>
     </nav>
 
     <main>
+        <section>
+            <div>
+                <h1 class="art_title">一句“打篮球能当饭吃吗”伤害了多少孩子的心！</h1>
+                <article class="art_text">
+                    <p>一句看似平常的质问，不知伤害了多少人的心。没错，如果从总体上看，打好篮球的人不多，依靠篮球最后养活自己的人也不多。除此之外，打篮球还带给我们伤病、耽误我们文化课的学习、阻碍我们挣钱养家等等。所以呢？某些人就可以有资格让我们放弃篮球吗？
+                    </p>
+                </article>
+            </div>
+        </section>
+        <section class="comment">
+            <h3 class="comment_count_info">
+                <div class="comment_title">
+                    <span>全部评论</span>
+                    <span class="comment_count">1</span>
+                </div>
+            </h3>
+            <div class="user_comment">
+                <div class="user_info" id="comment-3440152">
+                    <img class="img_user"
+                        src="//upload.jianshu.io/users/upload_avatars/2571348/ca2d531d-05db-4172-817d-582436cf6ea1.jpg?imageMogr2/auto-orient/strip|imageView2/1/w/80/h/80/format/webp"
+                        alt="">
+                    <div class="user">
+                        <div class="name">
+                            篮筐里的球
+                        </div>
+                        <div class="comment_info">
+                            <span>2楼 </span>
+                            <time datetime="2016-08-03T15:49:03.000Z">2016.08.03
+                                23:49</time></div>
+                        <div class="comment_text">波士顿的小托马斯也很励志</div>
+                    </div>
+                </div>
+            </div>
+        </section>
         <section id="bbsForm">
             <!-- 此处包含一个 article（一篇文章），内容略…… -->
             <form>
