实现基本功能，修改架构，实现面向对象设计。提交留言插入数据表返回false，但是数据库存在插入的数据

--- a/view/index/bbs.html
+++ b/view/index/bbs.html
@@ -31,10 +31,9 @@
     <main>
         <section>
             <div>
-                <h1 class="art_title" id="art-1">一句“打篮球能当饭吃吗”伤害了多少孩子的心！</h1>
+                <h1 class="art_title" id=""></h1>
                 <article class="art_text">
-                    <p>一句看似平常的质问，不知伤害了多少人的心。没错，如果从总体上看，打好篮球的人不多，依靠篮球最后养活自己的人也不多。除此之外，打篮球还带给我们伤病、耽误我们文化课的学习、阻碍我们挣钱养家等等。所以呢？某些人就可以有资格让我们放弃篮球吗？
-                    </p>
+                    <p></p>
                 </article>
             </div>
         </section>
