--- a/view/index/bbs.html
+++ b/view/index/bbs.html
@@ -37,7 +37,7 @@
                 </article>
             </div>
         </section>
-        <section class="comment">
+        <section class="comment" style="display: none;">
             <h3 class="comment_count_info">
                 <div class="comment_title">
                     <span>全部评论</span>
@@ -63,8 +63,8 @@
             </div>
             <div id="comment-pages">
                 <div class="first" id="home">首页</div>
-                <div class="first" id="before">上一页</div>
-                <div id="number">
+                <div class="first" id="prev">上一页</div>
+                <div id="page_number">
 
                 </div>
                 <div class="first" id="next">下一页</div>
