基本完成留言板的留言功能

--- a/view/index/bbs.html
+++ b/view/index/bbs.html
@@ -10,8 +10,7 @@
 </head>
 
 <body>
-    <script src="../scripts/bbs.js">
-    </script>
+    <script src="../scripts/bbs.js"></script>
     <header>
         <!-- 本站所有网页的统一主标题 -->
         <img src="../images/beach-ball.png">
@@ -65,7 +64,6 @@
                 <div class="first" id="home">首页</div>
                 <div class="first" id="prev">上一页</div>
                 <div id="page_number">
-
                 </div>
                 <div class="first" id="next">下一页</div>
                 <div class="first" id="last">尾页</div>
