完成基本功能

--- a/view/index/bbs.html
+++ b/view/index/bbs.html
@@ -94,7 +94,7 @@
         <p>© 2050 某某保留所有权利</p>
     </footer>
 
-    <script src="../scripts/bbs_submit.js"></script>
+    <!-- <script src="../scripts/bbs_submit.js"></script> -->
 </body>
 
 </html>
