完成接口的token验证

--- a/view/admin/login.html
+++ b/view/admin/login.html
@@ -17,7 +17,7 @@
             <div>
 
                 <!-- Start Sign In Form -->
-                <form action="../../controller/admin/login.php"method="POST">
+                <form action="../../controller/admin/login.php"method="POST" id="login">
                     <h2>登录</h2>
                     <div>
                         <label for="username">用户名</label>
@@ -25,7 +25,7 @@
                     </div>
                     <div>
                         <label for="password">密码</label>
-                        <input type="password" name="password" placeholder="密码" autocomplete="off">
+                        <input type="password" name="password" id="password" placeholder="密码" autocomplete="off">
                     </div>
                     <div>
                         <input type="submit" value="提交">
