完成后台登录验证

--- a/view/admin/admin.html
+++ b/view/admin/admin.html
@@ -155,7 +155,7 @@
             </div>
             <div class="user_info">
                 <a class="block" onclick="onChangeArticle(4)">我的资料</a>
-                <a class="block">注 销</a>
+                <a class="block" onclick="onLoginOut()">注 销</a>
             </div>
         </div>
     </header>
@@ -200,8 +200,8 @@
                     <tr>
                         <th>序号</th>
                         <th>ID</th>
-                        <th>用户名</th>
                         <th>文章标题</th>
+                        <th>用户名</th>
                         <th>内容</th>
                         <th>状态</th>
                         <th>操作</th>
