--- a/view/admin/login.html
+++ b/view/admin/login.html
@@ -20,6 +20,8 @@
                 <form action="../../controller/admin/login.php"method="POST" id="login">
                     <h2>登录</h2>
                     <div>
+                        <input type="hidden" id="userid" name="userid" value="" />
+                        <input type="hidden" id="token" name="token" value="" />
                         <label for="username">用户名</label>
                         <input type="text" name="username" placeholder="用户名" autocomplete="off">
                     </div>
