调整代码适用Restful风格

--- a/view/admin/admin.html
+++ b/view/admin/admin.html
@@ -147,7 +147,7 @@
         <div class="user right">
             <div>
                 <a href="#">
-                    <img src="../images/beach-ball.png">
+                    <img src="../images/beachball.png">
                 </a>
             </div>
             <div class="username">
