--- a/view/error/500.html
+++ b/view/error/500.html
@@ -2,7 +2,7 @@
 <html lang="zh-CN">
 <head>
   <meta charset="utf-8">
-  <title>404 错误 - phpstudy</title>
+  <title>500 错误 - phpstudy</title>
   <meta name="keywords" content="">
   <meta name="description" content="">
   <meta name="renderer" content="webkit">
@@ -25,7 +25,7 @@
       font-size: 26px;
     }
     .content{
-      width: 45%;
+      width: 40%;
       margin: 0 auto;
      
     }
@@ -48,24 +48,27 @@
 <body>
   <div class="content">
       <div>
-           <h1>404 - Page Not Found 未找到</h1>
+           <h1>HTTP 500 - Internal Server Error 服务器内部错误</h1>
         <dl>
-          <dt>错误说明：请求的页面不存在</dt>
-          <dt>原因1：访问的文档权限不够</dt>
+          <dt>错误说明：服务器内部错误，无法完成请求</dt>
+          <dt>原因1：伪静态规则不正确</dt>
 		  <dd>解决办法：</dd>
-          <dd>修改文件权限为755，windos系统修改目录权限为可写可读。</dd>
-          <dt>原因2：防火墙的原因</dt>
+          <dd>修改伪静态。</dd>
+          <dt>原因2：php版本与网站程序不兼容</dt>
 		  <dd>解决办法：</dd>
-          <dd>先关闭让防火墙通过WWW服务。</dd>
-		  <dt>原因3：站点根目录无默认访问文件</dt>
+          <dd>更换PHP版本。</dd>
+		  <dt>原因3：网站无法连接至数据库</dt>
 		  <dd>解决办法：</dd>
-          <dd>在根目录中创建index.html或者创建index.php。</dd>
-		  <dt>原因4：站点配置目录不正确</dt>
+          <dd>正确修改站点的数据库配置文件。</dd>
+		  <dt>原因4：php禁用了某一函数，需要开启</dt>
 		  <dd>解决办法：</dd>
-          <dd>将网站应用程序复制到站点目录中，或者修改站点配置目录指定到应用程序目录中。</dd>
-		  <dt>原因5：站点使用了伪静态</dt>
+          <dd>开启相关禁用函数。</dd>
+		  <dt>原因5：站点需要访问站外目录</dt>
 		  <dd>解决办法：</dd>
-          <dd>将伪静态规则删除，或者重新编写正确的伪静态规则，或关闭伪静态配置。</dd>
+          <dd>关闭防跨站处理。</dd>
+		  <dt>原因6：源码本身有BUG</dt>
+		  <dd>解决办法：</dd>
+          <dd>修复源码bug。</dd>
         </dl>
         <div>使用手册，视频教程，BUG反馈，官网地址： <a href="https://www.xp.cn"  target="_blank">www.xp.cn</a> </div>
     
