--- a/view/error/502.html
+++ b/view/error/502.html
@@ -2,7 +2,7 @@
 <html lang="zh-CN">
 <head>
   <meta charset="utf-8">
-  <title>404 错误 - phpstudy</title>
+  <title>502 错误 - phpstudy</title>
   <meta name="keywords" content="">
   <meta name="description" content="">
   <meta name="renderer" content="webkit">
@@ -48,24 +48,24 @@
 <body>
   <div class="content">
       <div>
-           <h1>404 - Page Not Found 未找到</h1>
+           <h1>HTTP 502 - Bad Gateway 没有响应</h1>
         <dl>
-          <dt>错误说明：请求的页面不存在</dt>
-          <dt>原因1：访问的文档权限不够</dt>
+          <dt>错误说明：坏的网关，http向后端节点请求，没有响应</dt>
+          <dt>原因1：DNS 缓冲</dt>
 		  <dd>解决办法：</dd>
-          <dd>修改文件权限为755，windos系统修改目录权限为可写可读。</dd>
-          <dt>原因2：防火墙的原因</dt>
+          <dd>在dos窗口运行 ipconfig /flushdns，该命令会刷新DNS缓冲。</dd>
+          <dt>原因2：浏览器代理</dt>
 		  <dd>解决办法：</dd>
-          <dd>先关闭让防火墙通过WWW服务。</dd>
-		  <dt>原因3：站点根目录无默认访问文件</dt>
+          <dd>关掉代理。</dd>
+		  <dt>原因3：dns 被劫持了，即使使用国外的dns，也会被劫持</dt>
 		  <dd>解决办法：</dd>
-          <dd>在根目录中创建index.html或者创建index.php。</dd>
-		  <dt>原因4：站点配置目录不正确</dt>
+          <dd>去掉VPN服务器的DNS。切换另外的dns。在windows系统中，可以在本地网络连接的属性中，去掉默认的dns，选用国外的dns，比如google的或opendns。</dd>
+		  <dt>原因4：php执行超时</dt>
 		  <dd>解决办法：</dd>
-          <dd>将网站应用程序复制到站点目录中，或者修改站点配置目录指定到应用程序目录中。</dd>
-		  <dt>原因5：站点使用了伪静态</dt>
+          <dd>修改/usr/local/php/etc/php.ini 将max_execution_time 改为300。</dd>
+		  <dt>原因5：nginx等待时间超时</dt>
 		  <dd>解决办法：</dd>
-          <dd>将伪静态规则删除，或者重新编写正确的伪静态规则，或关闭伪静态配置。</dd>
+          <dd>适当增加nginx.conf配置文件中FastCGI的timeout时间。</dd>
         </dl>
         <div>使用手册，视频教程，BUG反馈，官网地址： <a href="https://www.xp.cn"  target="_blank">www.xp.cn</a> </div>
     
