--- a/view/error/510.html
+++ b/view/error/510.html
@@ -2,7 +2,7 @@
 <html lang="zh-CN">
 <head>
   <meta charset="utf-8">
-  <title>404 错误 - phpstudy</title>
+  <title>510 错误 - phpstudy</title>
   <meta name="keywords" content="">
   <meta name="description" content="">
   <meta name="renderer" content="webkit">
@@ -30,7 +30,7 @@
      
     }
     .content >div{
-      margin-top: 50px;
+      margin-top: 200px;
       padding: 20px;
       background: #d9edf7;  
       border-radius: 12px;
@@ -48,24 +48,12 @@
 <body>
   <div class="content">
       <div>
-           <h1>404 - Page Not Found 未找到</h1>
+           <h1>HTTP 510 - Not Extended</h1>
         <dl>
-          <dt>错误说明：请求的页面不存在</dt>
-          <dt>原因1：访问的文档权限不够</dt>
+          <dt>错误说明:</dt>
+          <dt>原因1：获取资源所需要的策略并没有被满足</dt>
 		  <dd>解决办法：</dd>
-          <dd>修改文件权限为755，windos系统修改目录权限为可写可读。</dd>
-          <dt>原因2：防火墙的原因</dt>
-		  <dd>解决办法：</dd>
-          <dd>先关闭让防火墙通过WWW服务。</dd>
-		  <dt>原因3：站点根目录无默认访问文件</dt>
-		  <dd>解决办法：</dd>
-          <dd>在根目录中创建index.html或者创建index.php。</dd>
-		  <dt>原因4：站点配置目录不正确</dt>
-		  <dd>解决办法：</dd>
-          <dd>将网站应用程序复制到站点目录中，或者修改站点配置目录指定到应用程序目录中。</dd>
-		  <dt>原因5：站点使用了伪静态</dt>
-		  <dd>解决办法：</dd>
-          <dd>将伪静态规则删除，或者重新编写正确的伪静态规则，或关闭伪静态配置。</dd>
+          <dd>需要请求有额外的扩展内容，服务器才能处理请求。</dd>
         </dl>
         <div>使用手册，视频教程，BUG反馈，官网地址： <a href="https://www.xp.cn"  target="_blank">www.xp.cn</a> </div>
     
